# ai-skills

./: README.md
agent/: AGENTS.md  CLAUDE.md
hooks/: Readme.md  hooks.json
hooks/bash-guard/: hook.sh
hooks/read-once/: .last-cleanup  hook.sh  read-once  read-once.ps1  session-fee3a8e6178f5743.jsonl  stats.jsonl
hooks/save-conversation/: hook.sh
hooks/save-conversation/scripts/: save_conversation.py
skills/: Readme.md
skills/DeepPaperNote/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
skills/DeepPaperNote/.github/workflows/: ci.yml
skills/DeepPaperNote/agents/: openai.yaml
skills/DeepPaperNote/assets/: note_template.md
skills/DeepPaperNote/references/: architecture.md  deep-analysis.md  evidence-first.md  figure-placement.md  final-writing.md  metadata-sources.md  model-synthesis.md  note-quality.md  obsidian-format.md  paper-types.md  workflow.md
skills/DeepPaperNote/scripts/: build_synthesis_bundle.py  check_environment.py  collect_metadata.py  create_input_record.py  extract_evidence.py  extract_pdf_assets.py  fetch_pdf.py  locate_zotero_attachment.py  materialize_figure_asset.py  plan_figures.py  resolve_paper.py  write_obsidian_note.py
skills/DeepPaperNote/tests/: conftest.py  test_cli_fallback.py  test_common.py  test_extract_evidence.py  test_lint_note.py
skills/research/: SKILL.md
skills/test-skill/: SKILL.md
skills/web-access/: README.md  SKILL.md
skills/web-access/scripts/: cdp-proxy.mjs
